--- a/src/pages/ChristmasDay.css
+++ b/src/pages/ChristmasDay.css
@@ -1,4 +1,7 @@
 .ChristmasDay {
+    display: flex;
+    justify-content: center;
+    align-items: center;
     text-align: center;
     font-size: 2rem;
     margin-top: 50px;
