--- a/src/pages/ChristmasDay.css
+++ b/src/pages/ChristmasDay.css
@@ -2,8 +2,9 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    flex-direction: column;
     text-align: center;
     font-size: 2rem;
     margin-top: 50px;
-    background-color: red;
+    height: 100vh;
 }
