Code page NewYear ok

--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,10 @@
 body {
   background-color: red;
 }
+
+.App {
+  display: flex;
+  flex-direction: column;
+  justify-content: start;
+  align-items: center;
+}
