--- a/src/components/Nav.css
+++ b/src/components/Nav.css
@@ -1,6 +1,6 @@
 nav {
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-columns: 1fr 1fr;
     gap: 15px;
     text-align: center;
 }
